<resources>
    <string name="app_name">YourBestFriendPepper</string>

        <string name="label_child_name">Prénom de l\'enfant</string>
        <string name="hint_child_name">Ex : Lina</string>
        <string name="label_child_age">Âge de l\'enfant</string>
        <string name="hint_child_age">Ex : 4</string>
        <string name="label_known_story">Connais-tu l\'histoire du Monstre des Couleurs ?</string>
        <string name="yes">Oui</string>
        <string name="no">Non</string>
        <string name="btn_back">Retour</string>
        <string name="btn_next">Suivant</string>


</resources>